still texting alignment issues in contact.css

--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -67,10 +67,11 @@
 @media screen and (max-width: 600px) {
 
     .contact {
-        width: 90%;
+        width: 80%;
         text-align: center;
-        margin: 0 auto;
+        margin: 0 auto 2rem;
         background: red;
+        margin-bottom: 2rem;
     }
     .contact #contactdes {
         font-size: 1.2rem;
